kube/app/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-backend
  namespace: birdie
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: nodejs-backend
